// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contributions getAllContributions 1`] = `
[
  {
    "breadcrumbs": [
      {
        "label": "Congés et repos",
        "position": 3,
        "slug": "/themes/conges-et-repos",
      },
      {
        "label": "Congés",
        "position": 1,
        "slug": "/themes/conges",
      },
      {
        "label": "Congés pour événement familial",
        "position": 3,
        "slug": "/themes/conges-pour-evenement-familial",
      },
    ],
    "description": "Le code du travail prévoit que le salarié bénéficie de congés à l’occasion de certains événements familiaux. Ils n’entrainent aucune diminution de la rémunération…",
    "slug": "les-conges-pour-evenements-familiaux",
    "source": "contributions",
    "title": "Les congés pour événements familiaux",
  },
  {
    "breadcrumbs": [
      {
        "label": "Départ de l’entreprise",
        "position": 7,
        "slug": "/themes/depart-de-lentreprise",
      },
      {
        "label": "Autres départs",
        "position": 6,
        "slug": "/themes/autres-departs",
      },
    ],
    "description": "Le décès de l’employeur a des conséquences différentes sur le contrat de travail, selon que l’employeur est une entreprise individuelle ou un employeur…",
    "slug": "quelles-sont-les-consequences-du-deces-de-lemployeur-sur-le-contrat-de-travail",
    "source": "contributions",
    "title": "Quelles sont les conséquences du décès de l’employeur sur le contrat de travail ?",
  },
  {
    "breadcrumbs": [
      {
        "label": "Départ de l’entreprise",
        "position": 7,
        "slug": "/themes/depart-de-lentreprise",
      },
      {
        "label": "Autres départs",
        "position": 6,
        "slug": "/themes/autres-departs",
      },
    ],
    "description": "Le décès de l’employeur a des conséquences différentes sur le contrat de travail, selon que l’employeur est une entreprise individuelle ou un employeur…",
    "slug": "quand-le-salarie-a-t-il-droit-a-une-prime-danciennete-quel-est-son-montant",
    "source": "contributions",
    "title": "Quand le salarié a-t-il droit à une prime d’ancienneté ? Quel est son montant ?",
  },
]
`;

exports[`Contributions getByIdsContributions 1`] = `
[
  {
    "breadcrumbs": [
      {
        "label": "Congés et repos",
        "position": 3,
        "slug": "/themes/conges-et-repos",
      },
      {
        "label": "Congés",
        "position": 1,
        "slug": "/themes/conges",
      },
      {
        "label": "Congés pour événement familial",
        "position": 3,
        "slug": "/themes/conges-pour-evenement-familial",
      },
    ],
    "cdtnId": "eba7a4592f",
    "description": "Le code du travail prévoit que le salarié bénéficie de congés à l’occasion de certains événements familiaux. Ils n’entrainent aucune diminution de la rémunération…",
    "slug": "les-conges-pour-evenements-familiaux",
    "source": "contributions",
    "title": "Les congés pour événements familiaux",
  },
]
`;

exports[`Contributions getBySlugsContributions 1`] = `
{
  "breadcrumbs": [
    {
      "label": "Congés et repos",
      "position": 3,
      "slug": "/themes/conges-et-repos",
    },
    {
      "label": "Congés",
      "position": 1,
      "slug": "/themes/conges",
    },
    {
      "label": "Congés pour événement familial",
      "position": 3,
      "slug": "/themes/conges-pour-evenement-familial",
    },
  ],
  "ccSupported": [
    "1596",
    "1516",
    "3239",
    "1996",
    "1505",
    "3127",
    "1351",
    "1518",
    "0275",
    "2596",
    "0016",
    "2216",
    "3043",
    "1597",
    "2264",
    "1527",
    "2148",
    "1702",
    "1606",
    "1979",
    "1517",
    "1501",
    "2614",
    "1266",
    "0573",
    "1043",
    "0787",
    "2120",
    "1404",
    "1672",
    "1090",
    "0176",
    "0843",
    "1147",
    "0086",
    "0675",
    "0292",
    "1480",
    "0000",
    "1483",
    "1486",
    "2941",
    "2609",
    "3248",
    "2511",
  ],
  "cdtnId": "eba7a4592f",
  "description": "Le code du travail prévoit que le salarié bénéficie de congés à l’occasion de certains événements familiaux. Ils n’entrainent aucune diminution de la ...",
  "slug": "les-conges-pour-evenements-familiaux",
  "source": "contributions",
  "title": "Les congés pour événements familiaux",
}
`;

exports[`Contributions getGenericContributions 1`] = `
{
  "Congés et repos": [
    {
      "breadcrumbs": [
        {
          "label": "Congés et repos",
          "position": 3,
          "slug": "/themes/conges-et-repos",
        },
        {
          "label": "Congés",
          "position": 1,
          "slug": "/themes/conges",
        },
        {
          "label": "Congés pour événement familial",
          "position": 3,
          "slug": "/themes/conges-pour-evenement-familial",
        },
      ],
      "description": "Le code du travail prévoit que le salarié bénéficie de congés à l’occasion de certains événements familiaux. Ils n’entrainent aucune diminution de la ...",
      "slug": "les-conges-pour-evenements-familiaux",
      "source": "contributions",
      "theme": "Congés et repos",
      "title": "Les congés pour événements familiaux",
    },
    {
      "breadcrumbs": [
        {
          "label": "Congés et repos",
          "position": 3,
          "slug": "/themes/conges-et-repos",
        },
        {
          "label": "Congés",
          "position": 1,
          "slug": "/themes/conges",
        },
        {
          "label": "Congés liés à la naissance et à l’enfance",
          "position": 2,
          "slug": "/themes/conges-lies-a-la-naissance-et-a-lenfance",
        },
      ],
      "description": "L'employeur applique les conditions prévues par la convention ou l'accord collectif ou un usage, si elles sont plus favorables que le code du travail pour…",
      "slug": "quelle-est-la-duree-du-conge-de-maternite",
      "source": "contributions",
      "theme": "Congés et repos",
      "title": "Quelle est la durée du congé de maternité ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Congés et repos",
          "position": 3,
          "slug": "/themes/conges-et-repos",
        },
        {
          "label": "Congés",
          "position": 1,
          "slug": "/themes/conges",
        },
        {
          "label": "Congés payés",
          "position": 0,
          "slug": "/themes/conges-payes",
        },
      ],
      "description": "Le salarié est malade avant son départ en congés
Si le salarié ne peut prendre ses congés en raison d’une maladie, professionnelle ou non, d’un accident…",
      "slug": "si-le-salarie-est-malade-pendant-ses-conges-quelles-en-sont-les-consequences",
      "source": "contributions",
      "theme": "Congés et repos",
      "title": "Si le salarié est malade pendant ses congés, quelles en sont les conséquences ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Congés et repos",
          "position": 3,
          "slug": "/themes/conges-et-repos",
        },
        {
          "label": "Congés",
          "position": 1,
          "slug": "/themes/conges",
        },
        {
          "label": "Congés liés à la naissance et à l’enfance",
          "position": 2,
          "slug": "/themes/conges-lies-a-la-naissance-et-a-lenfance",
        },
      ],
      "description": "Pour être indemnisée, vous devez remplir les conditions suivantes :
être affiliée à la Sécurité sociale depuis au moins 6 mois à la date présumée de l'accouchement…",
      "slug": "quelles-sont-les-conditions-dindemnisation-pendant-le-conge-de-maternite",
      "source": "contributions",
      "theme": "Congés et repos",
      "title": "Quelles sont les conditions d’indemnisation pendant le congé de maternité ? ",
    },
    {
      "breadcrumbs": [
        {
          "label": "Congés et repos",
          "position": 3,
          "slug": "/themes/conges-et-repos",
        },
        {
          "label": "Dimanches, jours fériés et ponts",
          "position": 4,
          "slug": "/themes/dimanches-jours-feries-et-ponts",
        },
      ],
      "description": "Le code du travail prévoit les conditions de travail du dimanche. Il peut préciser, dans certains cas, les conditions de rémunération.
L'employeur applique…",
      "slug": "travail-du-dimanche-quelle-contrepartie",
      "source": "contributions",
      "theme": "Congés et repos",
      "title": "Travail du dimanche : quelle contrepartie ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Congés et repos",
          "position": 3,
          "slug": "/themes/conges-et-repos",
        },
        {
          "label": "Dimanches, jours fériés et ponts",
          "position": 4,
          "slug": "/themes/dimanches-jours-feries-et-ponts",
        },
      ],
      "description": "L'employeur applique les conditions prévues par la convention ou l'accord collectif ou un usage, si elles sont plus favorables que le code du travail pour…",
      "slug": "jours-feries-et-ponts-dans-le-secteur-prive",
      "source": "contributions",
      "theme": "Congés et repos",
      "title": "Jours fériés et ponts dans le secteur privé",
    },
  ],
  "Départ de l’entreprise": [
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
      ],
      "description": "L’employeur et le salarié doivent respecter le préavis (en cas de licenciement, démission, etc.). Si l’un d’eux ne respecte pas le préavis, le second peut ...",
      "slug": "quelles-sont-les-consequences-du-non-respect-du-preavis-par-le-salarie-ou-lemployeur",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Quelles sont les conséquences du non-respect du préavis par le salarié ou l'employeur ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Licenciement : droits des salariés et procédures",
          "position": 4,
          "slug": "/themes/licenciement-droits-des-salaries-et-procedures",
        },
      ],
      "description": "Lorsqu'un employeur licencie un salarié, celui-ci doit en principe effectuer un préavis. Cependant, il existe des exceptions. Qu'est-ce qu'un préavis de ...",
      "slug": "quelle-est-la-duree-de-preavis-en-cas-de-licenciement",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Quelle est la durée de préavis en cas de licenciement ?",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2855",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Retraite",
          "position": 5,
          "slug": "/themes/retraite",
        },
      ],
      "description": "Vous décidez de prendre votre retraite ou votre employeur vous met d'office à la retraite ? Vous pouvez percevoir une indemnité de départ en retraite si ...",
      "slug": "a-quelles-indemnites-peut-pretendre-un-salarie-qui-part-a-la-retraite",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "À quelles indemnités peut prétendre un salarié qui part à la retraite ?",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F13965",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Retraite",
          "position": 5,
          "slug": "/themes/retraite",
        },
        {
          "label": "Départ volontaire à la retraite",
          "position": 2,
          "slug": "/themes/depart-volontaire-a-la-retraite",
        },
      ],
      "description": "En cas de départ à la retraite, le salarié effectue un préavis. Sa durée est celle prévue en cas de licenciement. Elle dépend de l’ancienneté du salarié ...",
      "slug": "quelle-est-la-duree-de-preavis-en-cas-de-depart-a-la-retraite",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Quelle est la durée de préavis en cas de départ à la retraite ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "description": "2 cas sont à distinguer : Cas général La durée du préavis de démission est fixée : Soit par une convention collective ou un accord collectif ; Soit par les ...",
      "slug": "quelle-est-la-duree-du-preavis-en-cas-de-demission",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Quelle est la durée du préavis en cas de démission ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Fin d’un CDD - CTT",
          "position": 2,
          "slug": "/themes/fin-dun-cdd-ctt",
        },
      ],
      "description": "Le salarié a droit à une indemnité de fin de contrat (dite prime de précarité) lorsque le CDD arrive à son terme. Toutefois, dans certains cas, l'indemnité…",
      "slug": "dans-le-cadre-dun-cdd-quel-est-le-montant-de-lindemnite-de-fin-de-contrat",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Dans le cadre d’un CDD, quel est le montant de l’indemnité de fin de contrat ? ",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Autres départs",
          "position": 6,
          "slug": "/themes/autres-departs",
        },
      ],
      "description": "Le décès de l’employeur a des conséquences différentes sur le contrat de travail, selon que l’employeur est une entreprise individuelle ou un employeur…",
      "slug": "quelles-sont-les-consequences-du-deces-de-lemployeur-sur-le-contrat-de-travail",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Quelles sont les conséquences du décès de l’employeur sur le contrat de travail ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
      ],
      "description": "La rupture conventionnelle individuelle est un mode de rupture spécifique du contrat de travail qui repose sur une volonté commune du salarié et de l’employeur…",
      "slug": "quest-ce-quune-rupture-conventionnelle",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Qu’est-ce qu’une rupture conventionnelle ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
      ],
      "description": "L'employeur applique les conditions prévues par la convention ou l'accord collectif ou un usage, si elles sont plus favorables que le code du travail pour…",
      "slug": "arret-maladie-pendant-le-preavis-quelles-consequences",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Arrêt maladie pendant le préavis : quelles conséquences ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Démission",
          "position": 1,
          "slug": "/themes/demission",
        },
      ],
      "description": "Le préavis de démission doit être exécuté en totalité par l’employeur et le salarié, y compris si le salarié a retrouvé un emploi. Mais, le préavis n’est…",
      "slug": "le-preavis-de-demission-doit-il-etre-execute-en-totalite-y-compris-si-le-salarie-a-retrouve-un-emploi",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Le préavis de démission doit-il être exécuté en totalité ? Y compris si le salarié a retrouvé un emploi ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Fin d’un CDD - CTT",
          "position": 2,
          "slug": "/themes/fin-dun-cdd-ctt",
        },
      ],
      "description": "À l’expiration d’un contrat de mission (intérim), il ne peut être recouru, pour pourvoir le poste du salarié dont le contrat a pris fin, ni à un contrat…",
      "slug": "faut-il-respecter-un-delai-de-carence-entre-deux-contrats-de-mission-interim",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Faut-il respecter un délai de carence entre deux contrats de mission (intérim) ? ",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Retraite",
          "position": 5,
          "slug": "/themes/retraite",
        },
        {
          "label": "Mise à la retraite",
          "position": 1,
          "slug": "/themes/mise-a-la-retraite",
        },
      ],
      "description": "En cas de mise à la retraite, le salarié effectue un préavis. Sa durée est celle prévue en cas de licenciement. Elle dépend de l’ancienneté du salarié…",
      "slug": "quelle-est-la-duree-de-preavis-en-cas-de-mise-a-la-retraite",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Quelle est la durée de préavis en cas de mise à la retraite ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Licenciement : droits des salariés et procédures",
          "position": 4,
          "slug": "/themes/licenciement-droits-des-salaries-et-procedures",
        },
      ],
      "description": "Le préavis de licenciement doit être exécuté en totalité par l’employeur et le salarié, y compris si le salarié a retrouvé un emploi. Mais, le préavis…",
      "slug": "le-preavis-de-licenciement-doit-il-etre-execute-en-totalite-y-compris-si-le-salarie-a-retrouve-un-emploi",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Le préavis de licenciement doit-il être exécuté en totalité ? Y compris si le salarié a retrouvé un emploi ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
      ],
      "description": "Le code du travail ne prévoit pas que le salarié a le droit de s’absenter pendant son préavis pour pouvoir rechercher un nouvel emploi. Il existe une exception…",
      "slug": "le-salarie-peut-il-sabsenter-pour-rechercher-un-emploi-pendant-son-preavis",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Le salarié peut-il s’absenter pour rechercher un emploi pendant son préavis ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Fin d’un CDD - CTT",
          "position": 2,
          "slug": "/themes/fin-dun-cdd-ctt",
        },
      ],
      "description": "À la fin de chaque mission, le salarié doit percevoir, en complément de son salaire, une indemnité de fin de mission, plus souvent appelée prime de précarité.
Toutefois,…",
      "slug": "dans-le-cadre-dun-contrat-de-mission-interim-quel-est-le-montant-de-lindemnite-de-fin-de-contrat",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Dans le cadre d’un contrat de mission (intérim), quel est le montant de l’indemnité de fin de contrat ? ",
    },
    {
      "breadcrumbs": [
        {
          "label": "Départ de l’entreprise",
          "position": 7,
          "slug": "/themes/depart-de-lentreprise",
        },
        {
          "label": "Fin d’un CDD - CTT",
          "position": 2,
          "slug": "/themes/fin-dun-cdd-ctt",
        },
      ],
      "description": "1\\. Cas général
Lorsqu'un CDD prend fin, il n'est pas possible d'avoir recours à un nouveau CDD sur le même poste, avec le même salarié ou un autre salarié,…",
      "slug": "faut-il-respecter-un-delai-de-carence-entre-deux-cdd-si-oui-quelle-est-sa-duree",
      "source": "contributions",
      "theme": "Départ de l’entreprise",
      "title": "Faut-il respecter un délai de carence entre deux CDD ? Si oui, quelle est sa durée ?",
    },
  ],
  "Embauche et contrat de travail": [
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Embauche",
          "position": 1,
          "slug": "/themes/embauche",
        },
        {
          "label": "Période d’essai",
          "position": 3,
          "slug": "/themes/periode-dessai",
        },
      ],
      "description": "La période d’essai peut être renouvelée une seule fois et uniquement pour les salariés en CDI , si les 3 conditions suivantes sont remplies : La convention ...",
      "slug": "la-periode-dessai-peut-elle-etre-renouvelee",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "La période d’essai peut-elle être renouvelée ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
      ],
      "description": "Le contrat de travail peut être verbal (donc non écrit), sauf si le Code du travail prévoit l’obligation d’un contrat de travail écrit et signé. Cette ...",
      "slug": "est-il-obligatoire-davoir-un-contrat-de-travail-ecrit-et-signe",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Est-il obligatoire d'avoir un contrat de travail écrit et signé ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
        {
          "label": "CDD",
          "position": 2,
          "slug": "/themes/cdd",
        },
      ],
      "description": "…",
      "slug": "embauche-en-contrat-dextra-cdd-dusage",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Embauche en contrat d'extra (CDD d'usage)",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
        {
          "label": "CDI",
          "position": 1,
          "slug": "/themes/cdi",
        },
      ],
      "description": "…",
      "slug": "lentreprise-peut-elle-embaucher-dans-le-cadre-dun-cdi-de-chantier-ou-doperation",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "L'entreprise peut-elle embaucher dans le cadre d'un CDI de chantier ou d’opération ? ",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
        {
          "label": "CDD",
          "position": 2,
          "slug": "/themes/cdd",
        },
      ],
      "description": "La durée maximale du CDD prévue par le code du travail s’applique, sauf si une convention ou un accord collectif de branche étendu fixe cette durée. Toutefois,…",
      "slug": "quelle-peut-etre-la-duree-maximale-dun-cdd",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Quelle peut être la durée maximale d'un CDD ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Embauche",
          "position": 1,
          "slug": "/themes/embauche",
        },
        {
          "label": "Formalités d’embauche",
          "position": 2,
          "slug": "/themes/formalites-dembauche",
        },
      ],
      "description": "Le code du travail n'impose pas à l'employeur d’informer les salariés des postes créés ou qui se libèrent dans l’entreprise, sauf dans les cas suivants…",
      "slug": "si-un-poste-se-libere-ou-est-cree-dans-lentreprise-lemployeur-doit-il-en-informer-les-salaries-ou-le-leur-proposer-en-priorite",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Si un poste se libère ou est créé dans l’entreprise, l’employeur doit-il en informer les salariés ? Ou le leur proposer en priorité ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
      ],
      "description": "Le nombre de renouvellements du contrat de travail dépend du type de contrat.
Le nombre de renouvellements prévu par le code du travail s’applique, sauf…",
      "slug": "combien-de-fois-le-contrat-de-travail-peut-il-etre-renouvele",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Combien de fois le contrat de travail peut-il être renouvelé ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
      ],
      "description": "En cas de perte de marché, les contrats de travail sont transférés à la nouvelle entreprise uniquement dans les cas suivants :
Si la perte de marché entraîne…",
      "slug": "en-cas-de-perte-de-marche-par-lemployeur-quelles-sont-les-conditions-dun-transfert-des-contrats-de-travail",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "En cas de perte de marché par l’employeur, quelles sont les conditions d'un transfert des contrats de travail ? ",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Embauche",
          "position": 1,
          "slug": "/themes/embauche",
        },
        {
          "label": "Période d’essai",
          "position": 3,
          "slug": "/themes/periode-dessai",
        },
      ],
      "description": "Le code du travail prévoit la durée maximale de la période d’essai. Il précise que, dans certains cas, la période d’essai est automatiquement réduite ou…",
      "slug": "quelle-est-la-duree-maximale-de-la-periode-dessai-sans-et-avec-renouvellement",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Quelle est la durée maximale de la période d'essai, sans et avec renouvellement ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Embauche",
          "position": 1,
          "slug": "/themes/embauche",
        },
        {
          "label": "Période d’essai",
          "position": 3,
          "slug": "/themes/periode-dessai",
        },
      ],
      "description": "Si la convention ou l'accord collectif ou les usages prévoient des conditions plus favorables que le code du travail pour le salarié, l'employeur les applique.

Le…",
      "slug": "arret-maladie-pendant-la-periode-dessai-quelles-sont-les-regles",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Arrêt maladie pendant la période d'essai : quelles sont les règles ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
      ],
      "description": "Le code du travail prévoit le contenu obligatoire du contrat de travail uniquement pour certains contrats (CDD, contrat d’apprentissage, etc.).
Cependant,…",
      "slug": "quelles-informations-doivent-figurer-dans-le-contrat-de-travail-ou-la-lettre-dengagement",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Quelles informations doivent figurer dans le contrat de travail ou la lettre d'engagement ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
      ],
      "description": "La convention collective ou l’accord collectif peut prévoir les conditions de la clause de non-concurrence (montant de la contrepartie financière, durée,…",
      "slug": "quelles-sont-les-conditions-de-la-clause-de-non-concurrence",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Quelles sont les conditions de la clause de non-concurrence ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Embauche et contrat de travail",
          "position": 0,
          "slug": "/themes/embauche-et-contrat-de-travail",
        },
        {
          "label": "Contrat de travail",
          "position": 2,
          "slug": "/themes/contrat-de-travail",
        },
        {
          "label": "Intérim",
          "position": 3,
          "slug": "/themes/interim",
        },
      ],
      "description": "La durée du contrat de mission (intérim) prévue par le code du travail s’applique, sauf si une convention ou un accord collectif fixe cette durée.
La durée…",
      "slug": "quelle-est-la-duree-maximale-du-contrat-de-mission-interim",
      "source": "contributions",
      "theme": "Embauche et contrat de travail",
      "title": "Quelle est la durée maximale du contrat de mission (intérim) ?",
    },
  ],
  "Salaire et Rémunération": [
    {
      "breadcrumbs": [
        {
          "label": "Salaire et Rémunération",
          "position": 1,
          "slug": "/themes/salaire-et-remuneration",
        },
        {
          "label": "Primes et avantages",
          "position": 2,
          "slug": "/themes/primes-et-avantages",
        },
      ],
      "description": "Une convention collective peut prévoir des primes que l'employeur doit verser aux salariés. Elle précise alors leurs conditions d'attribution et montant.",
      "slug": "quelles-sont-les-primes-prevues-par-la-convention-collective",
      "source": "contributions",
      "theme": "Salaire et Rémunération",
      "title": "Quelles sont les primes prévues par la convention collective ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Salaire et Rémunération",
          "position": 1,
          "slug": "/themes/salaire-et-remuneration",
        },
        {
          "label": "Primes et avantages",
          "position": 2,
          "slug": "/themes/primes-et-avantages",
        },
      ],
      "description": "Le code du travail ne prévoit pas de prime d’ancienneté. Son versement peut être prévu par certaines conventions collectives.",
      "slug": "quand-le-salarie-a-t-il-droit-a-une-prime-danciennete-quel-est-son-montant",
      "source": "contributions",
      "theme": "Salaire et Rémunération",
      "title": "Quand le salarié a-t-il droit à une prime d’ancienneté ? Quel est son montant ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Salaire et Rémunération",
          "position": 1,
          "slug": "/themes/salaire-et-remuneration",
        },
        {
          "label": "Primes et avantages",
          "position": 2,
          "slug": "/themes/primes-et-avantages",
        },
      ],
      "description": "Les primes pour travaux dangereux et pour travaux insalubres ne sont pas prévues par le code du travail. Elles sont prévues par une convention ou un accord…",
      "slug": "quelles-sont-les-conditions-dattribution-de-la-prime-pour-travaux-dangereux-et-de-la-prime-pour-travaux-insalubres",
      "source": "contributions",
      "theme": "Salaire et Rémunération",
      "title": "Quelles sont les conditions d'attribution de la prime pour travaux dangereux et de la prime pour travaux insalubres ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Salaire et Rémunération",
          "position": 1,
          "slug": "/themes/salaire-et-remuneration",
        },
        {
          "label": "Bulletin de salaire et cotisations sociales",
          "position": 5,
          "slug": "/themes/bulletin-de-salaire-et-cotisations-sociales",
        },
      ],
      "description": "L'ancienneté du salarié est habituellement mentionnée sur le bulletin de salaire.
La convention collective ou l’accord collectif peut prévoir comment s’apprécie…",
      "slug": "comment-determiner-lanciennete-du-salarie",
      "source": "contributions",
      "theme": "Salaire et Rémunération",
      "title": "Comment déterminer l'ancienneté du salarié ?",
    },
  ],
  "Santé, sécurité et conditions de travail": [
    {
      "breadcrumbs": [
        {
          "label": "Santé, sécurité et conditions de travail",
          "position": 5,
          "slug": "/themes/sante-securite-et-conditions-de-travail",
        },
        {
          "label": "Santé au travail",
          "position": 3,
          "slug": "/themes/sante-au-travail",
        },
        {
          "label": "Maladie",
          "position": 1,
          "slug": "/themes/maladie",
        },
      ],
      "description": "Le code du travail prévoit une protection différente du salarié en cas de maladie ou accident non professionnel et en cas de maladie professionnelle ou…",
      "slug": "en-cas-de-maladie-le-salarie-a-t-il-droit-a-une-garantie-demploi",
      "source": "contributions",
      "theme": "Santé, sécurité et conditions de travail",
      "title": "En cas de maladie, le salarié a-t-il droit à une garantie d’emploi ?",
    },
    {
      "breadcrumbs": [
        {
          "label": "Santé, sécurité et conditions de travail",
          "position": 5,
          "slug": "/themes/sante-securite-et-conditions-de-travail",
        },
        {
          "label": "Santé au travail",
          "position": 3,
          "slug": "/themes/sante-au-travail",
        },
        {
          "label": "Maladie",
          "position": 1,
          "slug": "/themes/maladie",
        },
      ],
      "description": "Le code du travail prévoit des conditions du maintien de salaire différentes, selon que le salarié soit en arrêt maladie non professionnelle, en arrêt…",
      "slug": "en-cas-darret-maladie-du-salarie-lemployeur-doit-il-assurer-le-maintien-de-salaire",
      "source": "contributions",
      "theme": "Santé, sécurité et conditions de travail",
      "title": "En cas d’arrêt maladie du salarié, l’employeur doit-il assurer le maintien de salaire ?",
    },
  ],
  "Temps de travail": [
    {
      "breadcrumbs": [
        {
          "label": "Temps de travail",
          "position": 2,
          "slug": "/themes/temps-de-travail",
        },
        {
          "label": "Temps partiel",
          "position": 2,
          "slug": "/themes/temps-partiel",
        },
      ],
      "description": "Une convention collective ou un accord collectif peut prévoir des mesures sur le cumul d’emplois par le salarié (loyauté du salarié, clause d’exclusivité,…",
      "slug": "quelles-sont-les-conditions-de-cumul-demplois",
      "source": "contributions",
      "theme": "Temps de travail",
      "title": "Quelles sont les conditions de cumul d'emplois ?",
    },
  ],
}
`;
